--- a/sistemas_lineares.ipynb
+++ b/sistemas_lineares.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sistemas_lineares.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOAtod0T77ZLdrShq5ugQrQ",
+      "authorship_tag": "ABX9TyNuTRfHxx+i9gbN7YOnXOi0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,104 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "oTOPXkIEi-Zm"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
-      ]
+        "# Equações Lineares\n",
+        "\n",
+        "## Eliminaçao de Gauss\n",
+        "\n",
+        "$$\\displaylines{\n",
+        "  3x-4y+z=1\\cr\n",
+        "  2x+y+2z=3\\cr\n",
+        "  x+2y-z=5\n",
+        "  }$$\n",
+        "Primeiro, dividimos a primeira equação por $3$\n",
+        "\n",
+        "  $$\\eqalignno{x+\\frac{4}{3}y+\\frac{1}{3}z=\\frac{1}{3}&(1)}$$\n",
+        "\n",
+        "então subtraímos 2 vezes a Eq. (1) da segunda equação e 1 vez da terceira equação para eliminar o $x$ destas equações, obtendo\n",
+        "\n",
+        "$$\\eqalign{\n",
+        "    x+\\frac{4}{3}y+\\frac{1}{3}z=\\frac{1}{3}\\cr\n",
+        "    \\frac{11}{3}y+\\frac{4}{3}z=\\frac{7}{3}\\cr\n",
+        "    \\frac{10}{3}y-\\frac{4}{3}z=\\frac{14}{3}\\cr\n",
+        "}$$\n",
+        "\n",
+        "em seguida, dividimos a segunda equação por $\\frac{11}{3}$\n",
+        "\n",
+        "$$\\eqalign{y+\\frac{4}{11}z=\\frac{7}{11}&(2)}$$\n",
+        "\n",
+        "e multiplicamos a Eq. (2) por $\\frac{10}{3}$ para subtrairmos da terceira equação obtendo\n",
+        "\n",
+        "$$-\\frac{84}{33}z=\\frac{84}{33}.$$\n",
+        "\n",
+        "Então\n",
+        "\n",
+        "$$z=-1$$\n",
+        "\n",
+        "e substituímos $z$ na Eq. (2) obtendo\n",
+        "\n",
+        "$$y=\\frac{11}{4}-\\frac{4}{11}z=1$$\n",
+        "\n",
+        "e substituímos $y$ e $z$ na Eq. (1) obtendo\n",
+        "\n",
+        "$$x=\\frac{1}{3}+\\frac{4}{3}y-\\frac{1}{3}z=\\frac{1}{2}\\frac{4}{3}+\\frac{1}{3}=2.$$\n",
+        "\n",
+        "Para generalizar este processo, consideramos $n$ equações de $n$ variáveis\n",
+        "\n",
+        "$$\\eqalign{\n",
+        "  a_{1,1}x_1+a_{1,2}x_2+a_{1,3}x_3+\\ldots+a_{1,n}x_n-b_1\\cr\n",
+        "  a_{2,1}x_1+a_{2,2}x_2+a_{2,3}x_3+\\ldots+a_{2,n}x_n-b_2\\cr\n",
+        "  \\vdots\\cr\n",
+        "  a_{n,1}x_1+a_{n,2}x_2+a_{n,3}x_3+\\ldots+a_{n,n}x_n-b_n\n",
+        "}$$\n",
+        "\n",
+        "de forma a obter um algoritmo para a eliminação de Gauss\n",
+        "\n",
+        "```\n",
+        "dividir equação 1 por a[1,1]\n",
+        "para i=2:n:\n",
+        "    subtrair a[i,i-1] vezes a equação i da equação i-1\n",
+        "\n",
+        "para i=n,1:\n",
+        "  calcular x[i,i] na equação i\n",
+        "```\n",
+        "\n",
+        "Na primeira passada o custo é $n-1$ e na segunda $n$, \n",
+        "portanto o desempenho do algoritmo é $O(n)$.\n",
+        "\n",
+        "### Exercícios\n",
+        "\n",
+        "1. Resolva usando a eliminação de Gauss.\n",
+        "\n",
+        "a. \n",
+        "$$\\eqalign{\n",
+        "x+y=15\\cr\n",
+        "4x+2y=48\n",
+        "}$$\n",
+        "\n",
+        "b.\n",
+        "$$\\eqalign{\n",
+        "x+y+z=2\\cr\n",
+        "4x+4y+2z=2\\cr\n",
+        "2x+y-z=0\n",
+        "}$$\n",
+        "\n",
+        "c.\n",
+        "$$\\eqalign{\n",
+        "2x_1 & -1x_2 & +3x_3 & +5x_4 &=& -7\\cr\n",
+        "2x_1 & +1x_2 & +4x_3 & -2x_4 &=& -18\\cr\n",
+        "3x_1 &       & +3x_3 & -4x_4 &=& -25\\cr\n",
+        "     & -2x_2 &       & +6x_4 &= &-24\n",
+        "}$$\n",
+        "\n",
+        "## Referência\n",
+        "\n",
+        "- Numerical Methods for Scientists and Engineers. Richard Hamming. Dover Publications; 2nd revised edition, 1987."
+      ],
+      "metadata": {
+        "id": "-r7QcOKmwuDr"
+      }
     }
   ]
 }
