--- a/sistemas_lineares.ipynb
+++ b/sistemas_lineares.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sistemas_lineares.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNuTRfHxx+i9gbN7YOnXOi0",
+      "authorship_tag": "ABX9TyO4L8pYXmUyN9KAizJtcx3c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "  }$$\n",
         "Primeiro, dividimos a primeira equação por $3$\n",
         "\n",
-        "  $$\\eqalignno{x+\\frac{4}{3}y+\\frac{1}{3}z=\\frac{1}{3}&(1)}$$\n",
+        "  $$\\eqalignno{x-\\frac{4}{3}y+\\frac{1}{3}z=\\frac{1}{3}&(1)}$$\n",
         "\n",
         "então subtraímos 2 vezes a Eq. (1) da segunda equação e 1 vez da terceira equação para eliminar o $x$ destas equações, obtendo\n",
         "\n",
@@ -85,7 +85,7 @@
         "```\n",
         "dividir equação 1 por a[1,1]\n",
         "para i=2:n:\n",
-        "    subtrair a[i,i-1] vezes a equação i da equação i-1\n",
+        "    subtrair a[i,i-1] vezes a equação i-1 da equação i\n",
         "\n",
         "para i=n,1:\n",
         "  calcular x[i,i] na equação i\n",
