--- a/sistemas_lineares.ipynb
+++ b/sistemas_lineares.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sistemas_lineares.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4L8pYXmUyN9KAizJtcx3c",
+      "authorship_tag": "ABX9TyN96mAzC8xy2vSiOaxQTZ93",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,9 @@
       "source": [
         "# Equações Lineares\n",
         "\n",
-        "## Eliminaçao de Gauss\n",
+        "## Eliminaçao Gaussiana\n",
+        "\n",
+        "Consideramos o sistema de equações a seguir com $3$ variáveis:\n",
         "\n",
         "$$\\displaylines{\n",
         "  3x-4y+z=1\\cr\n",
