--- a/sistemas_lineares.ipynb
+++ b/sistemas_lineares.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "sistemas_lineares.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN96mAzC8xy2vSiOaxQTZ93",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM733vcGJ6TLeXmW+ci8dd+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,13 +121,258 @@
         "3x_1 &       & +3x_3 & -4x_4 &=& -25\\cr\n",
         "     & -2x_2 &       & +6x_4 &= &-24\n",
         "}$$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-r7QcOKmwuDr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Biblioteca `numpy.linalg`\n",
         "\n",
+        "Podemos usar a função `solve` da biblioteca (pacote) `numpy.linalg` para resover o sistema de equações lineares da seguinte maneira:"
+      ],
+      "metadata": {
+        "id": "ie7hAeQ7CbXO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "a = np.array([[3, -4, 1], [2, 1, 2], [1, 2, -1]])\n",
+        "b = np.array([1, 3, 5])\n",
+        "x = np.linalg.solve(a, b)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d-ViJGjKDQ_6",
+        "outputId": "c51300d5-08db-4aee-f47e-aeed97a896f5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 2.  1. -1.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Fatoração LU\n",
+        "\n",
+        "A fatoração (decomposição) LU de uma matrix $N\\times N$ chamada $A$ gera uma matriz triangular inferior $L$ e uma matriz triangular superior $U$\n",
+        "\n",
+        "$$\\eqalign{\n",
+        "    Ax=b& ⇒\\cr\n",
+        "   (LU)x = b&\\Rightarrow\\cr\n",
+        "   L(Ux) = b&\\Rightarrow \\cr\n",
+        "   Ly = b \\qquad& e\\qquad Ux=y\n",
+        "}$$\n",
+        "\n",
+        "Exemplo [copiado do [livro da UFRGS](https://www.ufrgs.br/reamat/CalculoNumerico/livro-py/sdsl-fatoracao_lu.html)]:\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\begin{pmatrix}\n",
+        " 1 & 1 & 1 \\\\\n",
+        " 2 & 1 & -1  \\\\\n",
+        " 2 & -1 & 1\n",
+        " \\end{pmatrix}\n",
+        " \\begin{pmatrix} \n",
+        "  x_1\\\\ x_2\\\\ x_3\n",
+        " \\end{pmatrix}\n",
+        " = \n",
+        " \\begin{pmatrix} \n",
+        "  -2\\\\ 1\\\\ 3\n",
+        " \\end{pmatrix}\n",
+        "\\end{align} \n",
+        "\n",
+        "Usando a Eq. (1) para decompor a matrix $A$, obtemos $LU$\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\begin{bmatrix}\n",
+        " 1 & 1 & 1 \\\\\n",
+        " 2 & 1 & -1  \\\\\n",
+        " 2 & -1 & 1\n",
+        " \\end{bmatrix}=&\n",
+        " \\begin{bmatrix} \n",
+        " 1 & 0 & 0 \\\\\n",
+        " 0 & 1 & 0 \\\\\n",
+        " 0 & 0 & 1\n",
+        " \\end{bmatrix}\n",
+        " \\begin{bmatrix} \n",
+        "  1 & 1 & 1 \\\\\n",
+        "  2 & 1& -1 \\\\ \n",
+        "  2 & -1 & 1\n",
+        " \\end{bmatrix}\\\\\n",
+        " =&\\begin{bmatrix} \n",
+        " 1 & 0 & 0 \\\\\n",
+        " 2 & 1 & 0 \\\\\n",
+        " 2 & 0 & 1\n",
+        " \\end{bmatrix}\n",
+        " \\begin{bmatrix} \n",
+        "  1 & 1 & 1 \\\\\n",
+        "  0 & -1& -3 \\\\ \n",
+        "  0 & -3 & -1\n",
+        " \\end{bmatrix}\\\\\n",
+        " =&\\begin{bmatrix} \n",
+        " 1 & 0 & 0 \\\\\n",
+        " 2 & 1 & 0 \\\\\n",
+        " 2 & 3 & 1\n",
+        " \\end{bmatrix}\n",
+        " \\begin{bmatrix} \n",
+        "  1 & 1 & 1 \\\\\n",
+        "  0 & -1& -3 \\\\ \n",
+        "  0 & 0 & 8\n",
+        " \\end{bmatrix}\n",
+        "\\end{align} \n",
+        "\n",
+        "Resolvemos $Ly=b$\n",
+        "$$\\eqalign{\n",
+        "  y_1  &       &      &=-2\\cr\n",
+        "  2y_1 & +y_2  &      &=1\\cr\n",
+        "  2y_1 & +3y_2 & +y_3 &=3\n",
+        "  }$$\n",
+        "\n",
+        "onde obtemos $y_=-2,y_2=-5, y_3=-8$; e então $Ux=y$\n",
+        "\n",
+        "$$\\eqalign{\n",
+        "   x_1 & +x_2 & +x_3    &=-2\\cr\n",
+        "       & -x_2 & -3x_3   &=5\\cr\n",
+        "       &      & +8x_3    &=-8\n",
+        "  }$$\n",
+        "\n",
+        "obtendo a solução $x_3=-1$, $x_2=-2$, $x_1=1$.\n"
+      ],
+      "metadata": {
+        "id": "u2IOl1m6CSYk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def LU(A):  \n",
+        "    U = np.copy(A)  \n",
+        "    n = np.shape(U)[0]  \n",
+        "    L = np.eye(n)  \n",
+        "    for j in np.arange(n-1):  \n",
+        "        for i in np.arange(j+1,n):  \n",
+        "            L[i,j] = U[i,j]/U[j,j]  \n",
+        "            for k in np.arange(j+1,n):  \n",
+        "                U[i,k] = U[i,k] - L[i,j]*U[j,k]  \n",
+        "            U[i,j] = 0  \n",
+        "    return L, U\n",
+        "A = [[1, 1, 1], \n",
+        "     [2, 1, -1], \n",
+        "     [2, -1, 1]]\n",
+        "L, U = LU(A)\n",
+        "print('L=\\n', L)\n",
+        "print('U=\\n', U)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LvS_v5TfrdN_",
+        "outputId": "07cd515c-8b37-4a93-f631-70d451c87392"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "L=\n",
+            " [[1. 0. 0.]\n",
+            " [2. 1. 0.]\n",
+            " [2. 3. 1.]]\n",
+            "U=\n",
+            " [[ 1  1  1]\n",
+            " [ 0 -1 -3]\n",
+            " [ 0  0  8]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Biblioteca `scipy.linalg`\n",
+        "\n",
+        "Mostramos a seguir o uso da função `lu` da biblioteca (pacote) `scipy.linalg` para a fatoração $LU$:"
+      ],
+      "metadata": {
+        "id": "1iFaQ9xyPkok"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import scipy\n",
+        "import numpy.linalg\n",
+        "\n",
+        "A = np.array([[3, -4, 1], [2, 1, 2], [1, 2, -1]])\n",
+        "b = np.array([1, 3, 5])\n",
+        "P, L, U = scipy.linalg.lu(A)\n",
+        "print('A =\\n', A)\n",
+        "print('L =\\n', L)\n",
+        "print('U =\\n', U)\n",
+        "\n",
+        "x = numpy.linalg.solve(A, b)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NtP3UtWPNpo-",
+        "outputId": "d93e76d4-389c-48ff-cbbc-8ca2e079665c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A =\n",
+            " [[ 3 -4  1]\n",
+            " [ 2  1  2]\n",
+            " [ 1  2 -1]]\n",
+            "L =\n",
+            " [[1.         0.         0.        ]\n",
+            " [0.66666667 1.         0.        ]\n",
+            " [0.33333333 0.90909091 1.        ]]\n",
+            "U =\n",
+            " [[ 3.         -4.          1.        ]\n",
+            " [ 0.          3.66666667  1.33333333]\n",
+            " [ 0.          0.         -2.54545455]]\n",
+            "[ 2.  1. -1.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Referência\n",
         "\n",
         "- Numerical Methods for Scientists and Engineers. Richard Hamming. Dover Publications; 2nd revised edition, 1987."
       ],
       "metadata": {
-        "id": "-r7QcOKmwuDr"
+        "id": "FX_GwumwCL7y"
       }
     }
   ]
