--- a/exercises/fatoracao.tex
+++ b/exercises/fatoracao.tex
@@ -8,12 +8,12 @@
 
 \begin{document}
 
-\title{2$^a$ Prova \\ Cálculo Numérico}
+\title{Cálculo Numérico}
 \author{prof. Adriano J. Holanda}
-\date{24 de maio de 2022}
+%\date{24 de maio de 2022}
 \maketitle
 
-1) [10 pontos] Resolva o sistema de equações lineares a seguir 
+1) Resolva o sistema de equações lineares a seguir 
 usando a eliminação Gaussiana sem e com pivoteamento.
 Mostrar os cálculos intermediários.
 
